--- a/docker-compose.gpu.yml
+++ b/docker-compose.gpu.yml
@@ -1,11 +1,11 @@
-version: "3.8"
+version: '3.8'
 
 services:
   celery_worker:
     build:
       context: .
       args:
-        CPU_ONLY: "false"
+        CPU_ONLY: 'false'
     image: converter-gpu-image
     command: poetry run celery -A worker.celery_config worker --pool=solo -n worker_primary --loglevel=info
     volumes:
@@ -13,13 +13,8 @@ services:
     environment:
       - REDIS_HOST=${REDIS_HOST}
       - ENV=production
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+      - NVIDIA_VISIBLE_DEVICES=all
+    runtime: nvidia
     depends_on:
       - redis
 
@@ -28,7 +23,7 @@ services:
     build:
       context: .
       args:
-        CPU_ONLY: "false"
+        CPU_ONLY: 'false'
     image: converter-gpu-image
     command: poetry run uvicorn --port 8080 --host 0.0.0.0 main:app
     environment:
@@ -36,16 +31,10 @@ services:
       - ENV=production
       - NVIDIA_VISIBLE_DEVICES=all
     ports:
-      - "8080:8080"
+      - "8081:8080"
     volumes:
       - .:/app
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+    runtime: nvidia
     depends_on:
       - redis
       - celery_worker
@@ -61,7 +50,7 @@ services:
     build:
       context: .
       args:
-        CPU_ONLY: "false"
+        CPU_ONLY: 'false'
     image: converter-gpu-image
     command: poetry run celery -A worker.celery_config flower --port=5555
     ports:
@@ -71,14 +60,9 @@ services:
     environment:
       - REDIS_HOST=${REDIS_HOST}
       - ENV=production
+      - NVIDIA_VISIBLE_DEVICES=all
+    runtime: nvidia
     depends_on:
       - app
       - redis
       - celery_worker
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
