--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
-docling = "^2.74.0"
+docling = {version = "^2.74.0", extras = ["easyocr"]}
 python-multipart = "^0.0.17"
 celery = "^5.4.0"
 flower = "^2.0.1"
