--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["drmingler <davidemmanuel75@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.14"
 fastapi = "^0.115.4"
 uvicorn = "^0.32.0"
-docling = {version = "^2.74.0", extras = ["easyocr"]}
+docling = {version = "^2.74.0", extras = ["vlm"]}
 python-multipart = "^0.0.17"
 celery = "^5.4.0"
 flower = "^2.0.1"
